@@ -1,3 +1,7 @@
+2017-04-29 S. Thiell <sthiell@stanford.edu>
+
+	* NodeSet.py: allow fully numeric node names (ticket #338).
+
 2017-02-21 S. Thiell <sthiell@stanford.edu>
 
 	* Worker/Tree.py: fix defect in file copying code when destination target
